<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingTop="90dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tittle"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3">

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/p1"
            android:background="@color/btn1"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/p2"
            android:background="@color/btn2"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/p3"
            android:background="@color/btn3"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/p4"
            android:background="@color/btn4"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/p5"
            android:background="@color/btn5"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/p6"
            android:background="@color/btn6"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/p7"
            android:background="@color/btn7"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/p8"
            android:background="@color/btn8"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/p9"
            android:background="@color/btn9"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />


    </GridLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/users" />

    <EditText
        android:id="@+id/et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint" />

    <Button
        android:id="@+id/btnsubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSub"
        android:textStyle="bold"/>

</LinearLayout>