<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingTop="100dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fact"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_userResult"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="50dp"
        android:layout_height="wrap_content"
        android:text="@string/userN"/>

    <TextView
        android:id="@+id/tv_emailResult"
        android:layout_gravity="left"
        android:layout_marginLeft="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailN"/>

    <TextView
        android:id="@+id/tv_total"
        android:layout_gravity="left"
        android:layout_marginLeft="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalP"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalleP"/>


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3">

        <Button
            android:id="@+id/btn1_i"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/producto_1"
            android:background="#bc1f26"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn2_i"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/producto_2"
            android:background="#8b164f"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn3_i"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/producto_3"
            android:background="#4b2087"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn4_i"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/producto_4"
            android:background="#30268d"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn5_i"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/producto_5"
            android:background="#172b7a"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn6_i"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/producto_6"
            android:background="#004b9c"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn7_i"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/producto_7"
            android:background="#005996"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn8_i"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/producto_8"
            android:background="#006063"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn9_i"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/producto_9"
            android:background="#004e43"
            android:layout_margin="15dp"
            android:textColor="#fff"
            android:textSize="10sp" />


    </GridLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Share"
        android:id="@+id/btnshare"/>

</LinearLayout>